# Portfolio-Management-Tool

./: .env.example  BACKEND_ARCHITECTURE.md  COLLABORATION_GUIDE.md  FACTSET_SETUP.md  QUICKSTART.md  README.md  UI_COMPONENT_GUIDE.md  UX_OPTIMIZATION_SUMMARY.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts  worker.ts
src/: App.tsx  AppEnhanced.tsx  index-backup.css  index-new.css  index.css  main.tsx  types.ts  vite-env.d.ts
src/components/: AISearchModal.tsx  AddInvestment-old.tsx  AddInvestment.tsx  AlertsPanel.tsx  AuditTrail.tsx  ChartComponents.tsx  CollaborationPanel.tsx  CommandPalette.tsx  ConfirmationModal.tsx  CorrelationMatrix.tsx  CustomTooltip.tsx  Dashboard.tsx  DividendTracker.tsx  EnhancedTable.tsx  EnvironmentBanner.tsx  EquityResearch.tsx  ErrorBoundary.tsx  HelpModal.tsx  InvestmentList.tsx  Login.tsx  MacroIndicators.tsx  MonteCarloChart.tsx  NewsFeed.tsx  PerformanceChart-old.tsx  PerformanceChart.tsx  PositionSizing.tsx  ResearchNotes.tsx  RiskAnalysis.tsx  ScenarioAnalysis.tsx  ThemeResearch.tsx  TradeJournal.tsx  UIComponents.tsx  Watchlist.tsx
src/config/: chartTheme.ts  navigation.ts
src/contexts/: AuthContext.tsx  PortfolioContext.old.tsx  PortfolioContext.tsx
src/features/: index.ts
src/hooks/: useToast.ts
src/pages/: index.ts  (+23 more)
tests/: test_optimization.py  test_portfolio.py  test_risk.py  test_securities.py  test_stress_testing.py
(+89 files in other folders)
